Исправления после первого ревью